--- a/pom.xml
+++ b/pom.xml
@@ -53,14 +53,35 @@
 
 	<distributionManagement>
 		<repository>
-			<id>releases</id>
-			<url>http://maven.51wakeup.cn/nexus/content/repositories/releases</url>
+			<id>sonatype-release</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
 		</repository>
 		<snapshotRepository>
-			<id>snapshots</id>
-			<url>http://maven.51wakeup.cn/nexus/content/repositories/snapshots</url>
+			<id>sonatype-snapshots</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
+
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<scm>
+		<tag>master</tag>
+		<url>git@github.com:jingxiang/velocity-spring-boot-starter.git</url>
+		<connection>scm:git:git@github.com:jingxiang/velocity-spring-boot-starter.git</connection>
+		<developerConnection>scm:git:git@github.com:jingxiang/velocity-spring-boot-starter.git</developerConnection>
+	</scm>
+	<developers>
+		<developer>
+			<name>kalman03</name>
+			<email>kalman03@163.com</email>
+		</developer>
+	</developers>
 
 	<build>
 		<finalName>${project.name}</finalName>
@@ -87,6 +108,20 @@
 						<phase>compile</phase>
 						<goals>
 							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
 						</goals>
 					</execution>
 				</executions>
