--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.kalman03</groupId>
 	<artifactId>velocity-spring-boot-starter</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>velocity-spring-boot-starter</name>
 
 	<properties>
