--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
 	<groupId>com.kalman03</groupId>
 	<artifactId>velocity-spring-boot-starter</artifactId>
 
-	<version>3.0.0-M4</version>
+	<version>3.0.6</version>
 	<name>velocity-spring-boot-starter</name>
 	<description>velocity-spring-boot-starter</description>
 	<url>https://github.com/jingxiang/velocity-spring-boot-starter</url>
 	<properties>
 		<java.version>17</java.version>
-		<springboot.version>3.0.0-M4</springboot.version>
+		<springboot.version>3.0.6</springboot.version>
 		<velocity.version>2.3</velocity.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
